@@ -1,3 +1,8 @@
+2023-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* tests/upmendex.test:
+	Make easier to test on Windows.
+
 2023-07-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* fwrite.c, mendex.h:
